--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,34 @@
   display: none;
 }
 
+@media (hover: hover) {
+  .header-nav > nav > ul > li > a:hover {
+    color: #c88b35;
+    transition: all .2s;
+  }
+
+  .main-right-block > button:hover {
+    background-color: #c88b35;
+    scale: 1.05;
+    transition: background-color .2s, scale .3s;
+  }
+  
+  .main-right-block > button:active {
+    background-color: #c88b35;
+    -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    scale: 1;
+    transition: all 0s;
+  }
+
+  .footer-links:hover {
+    color: #c88b35;
+    scale: 1.01;
+    transition: all .2s;
+  }
+}
+
 body {
   font-family: 'Inter', sans-serif;
   width: 100vw;
